MODOAIPMH-647 Refactored